Adding hourly and daily weather forecasting design and integration.

--- a/src/app/modules/weather-forecasting/pages/weather-viewing/weather-viewing.component.html
+++ b/src/app/modules/weather-forecasting/pages/weather-viewing/weather-viewing.component.html
@@ -26,9 +26,9 @@
         {{ currentDate | date: 'EEEE dd, yyyy' }}
       </span>
       <span [ngSwitch]="weatherObj.currentTemperatureIcon">
-        <svg-icon *ngSwitchCase="temperatureIcons.cloudy" src="assets/icons/weather-forecasting/sunny-icon.svg">
+        <svg-icon *ngSwitchCase="temperatureIcons.cloudy" src="assets/icons/weather-forecasting/cloudy-icon.svg">
         </svg-icon>
-        <svg-icon *ngSwitchDefault src="assets/icons/weather-forecasting/cloudy-icon.svg"></svg-icon>
+        <svg-icon *ngSwitchDefault src="assets/icons/weather-forecasting/sunny-icon.svg"></svg-icon>
       </span>
 
       <span class="short-summary">
@@ -49,4 +49,5 @@
       </span>
     </section>
   </main>
+  <app-hourly-daily-weather-forecast [weatherObj]="weatherObj"></app-hourly-daily-weather-forecast>
 </div>
