--- a/src/app/modules/weather-forecasting/components/hourly-daily-weather-forecast/hourly-daily-weather-forecast.component.scss
+++ b/src/app/modules/weather-forecasting/components/hourly-daily-weather-forecast/hourly-daily-weather-forecast.component.scss
@@ -41,6 +41,11 @@ main {
       margin-bottom: 10px;
     }
 
+    .temp-icon {
+      height: 66px;
+      width: 66px;
+    }
+
     .temperature-value {
       font-size: 36px;
       color: #ffffff;
