--- a/src/app/modules/weather-forecasting/pages/weather-viewing/weather-viewing.component.scss
+++ b/src/app/modules/weather-forecasting/pages/weather-viewing/weather-viewing.component.scss
@@ -69,6 +69,11 @@ main {
       margin-bottom: 15px;
     }
 
+    .temp-icon {
+      height: 97px;
+      width: 97px;
+    }
+
     .short-summary {
       font-size: 30px;
     }
