--- a/src/app/modules/weather-forecasting/pages/weather-viewing/weather-viewing.component.scss
+++ b/src/app/modules/weather-forecasting/pages/weather-viewing/weather-viewing.component.scss
@@ -5,16 +5,30 @@
   padding: 40px 9.5%;
   box-sizing: border-box;
   overflow: auto;
+
+  @media screen and (max-width: 992px) {
+    padding: 20px 5%;
+  }
 }
 
 header {
   justify-content: space-between;
   margin-bottom: 170px;
 
+  @media screen and (max-width: 992px) {
+    margin-bottom: 50px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
   .instaweather-title {
     font-weight: bold;
     font-size: 36px;
     color: #ffffff;
+
+    @media screen and (max-width: 992px) {
+      margin-bottom: 10px;
+    }
   }
 
   .temperature-measurement {
@@ -48,6 +62,11 @@ main {
   justify-content: space-between;
   margin-bottom: 65px;
 
+  @media screen and (max-width: 992px) {
+    flex-direction: column;
+    margin-bottom: 40px;
+  }
+
   section {
     .current-city,
     .current-date,
@@ -62,6 +81,17 @@ main {
     .current-city {
       font-size: 64px;
       margin-bottom: 15px;
+
+      @media screen and (max-width: 992px) {
+        font-size: 40px;
+      }
+    }
+
+    .temp-icon-container {
+      @media screen and (max-width: 992px) {
+        display: flex;
+        justify-content: center;
+      }
     }
 
     .current-date {
@@ -76,11 +106,19 @@ main {
 
     .short-summary {
       font-size: 30px;
+
+      @media screen and (max-width: 992px) {
+        text-align: center;
+      }
     }
 
     .current-temperature {
       font-size: 144px;
       margin-inline-start: auto;
+
+      @media screen and (max-width: 992px) {
+        font-size: 60px;
+      }
     }
 
     .high-low-temperature {
@@ -88,10 +126,18 @@ main {
       font-size: 48px;
       margin-bottom: 20px;
       margin-inline-start: auto;
+
+      @media screen and (max-width: 992px) {
+        font-size: 30px;
+      }
     }
 
     .summary-today {
       font-size: 24px;
+
+      @media screen and (max-width: 992px) {
+        font-size: 18px;
+      }
     }
   }
 }
